--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,7 @@
       </nav>
     </header>
     <main>
-      <div class="container-fluid d-flex flex-wrap">
+      <div class="container-fluid d-flex flex-wrap" id="app">
         <div class="card" style="width: 18rem" v-for="(disk, index) in disks">
           <img :src="disk.poster" class="card-img-top" alt="..." />
           <div class="card-body text-center">
